--- a/list.html
+++ b/list.html
@@ -11,40 +11,8 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="owl/owl.carousel.js"></script>
     <script type="text/javascript" src="spinner/waitMe.min.js"></script>
+    <script type="text/javascript" src="js/jquery.query.string.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var owl = $('.owl-carousel');
-
-            owl.owlCarousel({
-                loop: true,
-                dots: true,
-                margin: 5,
-                responsive: {
-                    0: {
-                        items: 1
-                    },
-                    600: {
-                        items: 3
-                    },
-                    960: {
-                        items: 5
-                    },
-                    1200: {
-                        items: 6
-                    }
-                }
-            });
-            owl.on('mousewheel', '.owl-stage', function (e) {
-                if (e.deltaY > 0) {
-                    owl.trigger('next.owl');
-                } else {
-                    owl.trigger('prev.owl');
-                }
-                e.preventDefault();
-            });
-        })
-    </script>
     <style type="text/css">
         .header-s
         {
@@ -131,6 +99,111 @@
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf',GradientType=0 ); /* IE6-9 */
         }
     </style>
+    <script type="text/javascript">
+        document.addEventListener('deviceready', onDeviceReady, false);
+
+        function onDeviceReady() {
+            vAction = getParameterByName("vAction");
+
+            switch (vAction) {
+                case 1:
+                    {
+                        $(".ionic-body").waitMe({
+                            effect: 'ios',
+                            text: 'Please wait',
+                            bg: 'rgba(255,255,255,0.7)',
+                            color: '#000'
+                        });
+
+                        try {
+                            var db = window.sqlitePlugin.openDatabase({ name: "sarkar.db" });
+
+                            var vPartNo = getParameterByName("vPartNo");
+
+                            var vName = getParameterByName("vName");
+
+                            var strCommand = 'SELECT * FROM Voters';
+                            var strCondition = '';
+
+                            if (vPartNo != '') {
+                                strCondition = 'WHERE PartNo = ' + vPartNo;
+                            }
+
+                            if (vName != '') {
+
+                                if (vPartNo != '') {
+                                    strCondition = ' AND ';
+                                }
+                                else {
+                                    strCondition = ' WHERE ';
+                                }
+
+                                strPartCondition = "Fname LIKE = '%" + vPartNo + "%'";
+                            }
+
+                            strCommand += ' order by VoterId LIMIT 50, ' + $("#anchPageNo").attr("data-page-number");
+
+                            db.transaction(function (tx) {
+                                tx.executeSql(strCommand, [], function (tx, results) {
+
+                                    if (results.rows.length > 0) {
+                                        for (var i = 0; i < results.rows.length; i++) {
+                                            row = results.rows.item(i);
+
+                                            var strHtmlLit = '<div class="list card"><div class="item"><h2>' + row.Mname + '</h2></div>';
+                                            strHtmlLit += '<div class="item item-body">';
+                                            strHtmlLit += '<table style="width:100%;">';
+                                            strHtmlLit += '<tr><td colspan="2">IdCard: ' + row.IdCard + '</td></tr>';
+                                            strHtmlLit += '<tr><td colspan="2">HouseNo: ' + row.HouseNo + '</td></tr>';
+                                            strHtmlLit += '<tr><td colspan="2">Poling Station: ' + row.PsName + '</td></tr>';
+                                            strHtmlLit += '<tr><td colspan="2">Part No: ' + row.PsLocation + '</td></tr>';
+                                            strHtmlLit += '</table></div>';
+
+                                            if (row.HouseNo != '') {
+                                                strHtmlLit += '<div class="item tabs tabs-secondary tabs-icon-left">';
+                                                strHtmlLit += '<a class="tab-item" href="list.html?vAction=3&vHouseNo="' + row.HouseNo + '><i class="icon ion-person"></i>Family </a>';
+                                                strHtmlLit += '</div>';
+                                            }
+
+                                            strHtmlLit += '</div>';
+                                        }
+
+                                        $("#VoterList").html(strHtmlLit);
+                                    }
+                                    else {
+                                     navigator.notification.alert(
+                                            'No result found for youir search, Please try again with diffrent search',
+                                            function () { },
+                                            'Maha Sarkar',
+                                            'Ok'
+                                        );
+                                    }
+                                function (error) {
+                                    navigator.notification.alert(
+                                            'An error has been occured processing your request ' + JSON.stringify(error),
+                                            function () { },
+                                            'Maha Sarkar',
+                                            'Ok'
+                                        );
+                                });
+                            });
+                        } catch (e) {
+                            $('.ionic-body').waitMe('hide');
+
+                            navigator.notification.alert(
+                                'Sorry, There was a problem with your last request. Please contact supprt! ' + e,
+                                function () { },
+                                'Maha Sarkar',
+                                'Ok'
+                            );
+                        }
+
+                        break;
+                    }
+                default:
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="ionic-body">
@@ -142,72 +215,22 @@
         </div>
         <div class="content has-header has-footer padding main-s" style="overflow: scroll;
             height: 100%;" id="container">
-            
-            <p>Note: Swipe to change menu</p>
-
-            <div class="owl-carousel owl-theme">
-                <div class="item" style="padding: 0; margin: 0; border: none;background-color:Transparent;">
-                    <div class="row">
-                        <div class="col">
-                            <a href="#" class="button button-full button-s" style="font-size: 14px; font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By Name</a>
-                        </div>
-                        <div class="col">
-                            <a href="topic.html" class="button button-full button-s" style="font-size: 14px;
-                                font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By Surname</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <a href="#" class="button button-full button-s" style="font-size: 14px; font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By Father Name</a>
-                        </div>
-                        <div class="col">
-                            <a href="topic.html" class="button button-full button-s" style="font-size: 14px;
-                                font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By House No</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item" style="padding: 0; margin: 0; border: none;background-color:Transparent;">
-                    <div class="row">
-                        <div class="col">
-                            <a href="#" class="button button-full button-s" style="font-size: 14px; font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By Name</a>
-                        </div>
-                        <div class="col">
-                            <a href="topic.html" class="button button-full button-s" style="font-size: 14px;
-                                font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By Surname</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <a href="#" class="button button-full button-s" style="font-size: 14px; font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By Father Name</a>
-                        </div>
-                        <div class="col">
-                            <a href="topic.html" class="button button-full button-s" style="font-size: 14px;
-                                font-weight: bold;">
-                                <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
-                                By House No</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="button-bar">
+                <a class="button button-small button-outline button-positive"><i class="icon icon-left ion-chevron-left">
+                </i></a><a class="button button-small button-outline button-positive" data-page-no="1">
+                    Page # 3
+                    <br />
+                    20 - 40 of 18900</a> <a class="button button-small button-outline button-positive"><i
+                        class="icon icon-left ion-chevron-right"></i></a>
             </div>
+            <div id="VotersList">
+            </div>
+            
             <br />
             <br />
             <br />
         </div>
-         <div class="bar bar-footer footer-s">
+        <div class="bar bar-footer footer-s">
             <a class="button button-nav ion-disc" href="about.html">&nbsp; </a>
             <h1 class="title">
                 VIDHAYAK SHRI CANDIDATE NAME</h1>
