--- a/NameSearch.html
+++ b/NameSearch.html
@@ -12,7 +12,6 @@
     <script type="text/javascript" src="owl/owl.carousel.js"></script>
     <script type="text/javascript" src="spinner/waitMe.min.js"></script>
     <script type="text/javascript" src="js/jquery.query.string.js"></script>
-
     <script type="text/javascript" src="cordova.js"></script>
     <style type="text/css">
         .header-s
@@ -104,122 +103,11 @@
         document.addEventListener('deviceready', onDeviceReady, false);
 
         function onDeviceReady() {
-            vAction = getParameterByName("vAction");
 
-            switch (vAction) {
-                case 1:
-                    {
-                        $(".ionic-body").waitMe({
-                            effect: 'ios',
-                            text: 'Please wait',
-                            bg: 'rgba(255,255,255,0.7)',
-                            color: '#000'
-                        });
+        }
 
-                        try {
-                            var db = window.sqlitePlugin.openDatabase({ name: "sarkar.db" });
-
-                            var vPartNo = getParameterByName("vPartNo");
-
-                            var vName = getParameterByName("vName");
-
-                            var vPageNo = getParameterByName("vPageNo");
-
-                            $("anchNext").attr("href", "list.html?vAction" + vAction + "&vPartNo" + vPartNo + "&vName" + vName + vPartNo + "&vPageNo" + (parseInt(vPageNo) + 1));
-
-                            if (parseInt(vPageNo) > 1) {
-                                $("anchPrevious").attr("href", "list.html?vAction" + vAction + "&vPartNo" + vPartNo + "&vName" + vName + vPartNo + "&vPageNo" + (parseInt(vPageNo) - 1));
-                            }
-                            else {
-                                $("anchPrevious").attr("href", "#");
-                            }
-
-                            var strCommand = 'SELECT * FROM Voters';
-                            var strCondition = '';
-
-                            if (vPartNo != '') {
-                                strCondition = 'WHERE PartNo = ' + vPartNo;
-                            }
-
-                            if (vName != '') {
-
-                                if (vPartNo != '') {
-                                    strCondition = ' AND ';
-                                }
-                                else {
-                                    strCondition = ' WHERE ';
-                                }
-
-                                strPartCondition = "Fname LIKE = '%" + vPartNo + "%'";
-                            }
-
-                            strCommand += ' order by VoterId LIMIT 50, ' + vPageNo;
-
-                            alert(strCommand);
-
-                            db.transaction(function (tx) {
-
-                                tx.executeSql(strCommand, [], function (tx, results) {
-
-                                    alert(results.rows.length);
-
-                                    if (results.rows.length > 0) {
-                                        for (var i = 0; i < results.rows.length; i++) {
-                                            row = results.rows.item(i);
-
-                                            var strHtmlLit = '<div class="list card"><div class="item"><h2>' + row.Mname + '</h2></div>';
-                                            strHtmlLit += '<div class="item item-body">';
-                                            strHtmlLit += '<table style="width:100%;">';
-                                            strHtmlLit += '<tr><td colspan="2">IdCard: ' + row.IdCard + '</td></tr>';
-                                            strHtmlLit += '<tr><td colspan="2">HouseNo: ' + row.HouseNo + '</td></tr>';
-                                            strHtmlLit += '<tr><td colspan="2">Poling Station: ' + row.PsName + '</td></tr>';
-                                            strHtmlLit += '<tr><td colspan="2">Part No: ' + row.PsLocation + '</td></tr>';
-                                            strHtmlLit += '</table></div>';
-
-                                            if (row.HouseNo != '') {
-                                                strHtmlLit += '<div class="item tabs tabs-secondary tabs-icon-left">';
-                                                strHtmlLit += '<a class="tab-item" href="list.html?vAction=3&vHouseNo="' + row.HouseNo + '><i class="icon ion-person"></i>Family </a>';
-                                                strHtmlLit += '</div>';
-                                            }
-
-                                            strHtmlLit += '</div>';
-                                        }
-
-                                        $("#VoterList").html(strHtmlLit);
-                                    }
-                                    else {
-                                        navigator.notification.alert(
-                                            'No result found for youir search, Please try again with diffrent search',
-                                            function () { },
-                                            'Maha Sarkar',
-                                            'Ok'
-                                        );
-                                    }
-                                },
-                                function (error) {
-                                    navigator.notification.alert(
-                                            'An error has been occured processing your request ' + JSON.stringify(error),
-                                            function () { },
-                                            'Maha Sarkar',
-                                            'Ok'
-                                        );
-                                });
-                            });
-                        } catch (e) {
-                            $('.ionic-body').waitMe('hide');
-
-                            navigator.notification.alert(
-                                'Sorry, There was a problem with your last request. Please contact supprt! ' + e,
-                                function () { },
-                                'Maha Sarkar',
-                                'Ok'
-                            );
-                        }
-
-                        break;
-                    }
-                default:
-            }
+        function Search() {
+            location = "list.html?vAction=1&PartNo=" + $("#txtPartNo").val() + "&vName=" + $("#txtName").val() + "vPageNo=1";
         }
     </script>
 </head>
@@ -233,17 +121,19 @@
         </div>
         <div class="content has-header has-footer padding main-s" style="overflow: scroll;
             height: 100%;" id="container">
-            <div class="button-bar">
-                <a class="button button-small button-outline button-positive" id="anchPrevious"><i class="icon icon-left ion-chevron-left">
-                </i></a><a class="button button-small button-outline button-positive" data-page-no="1">
-                    Page # 3
-                    <br />
-                    20 - 40 of 18900</a> <a class="button button-small button-outline button-positive" id="anchNext"><i
-                        class="icon icon-left ion-chevron-right"></i></a>
+            <div class="list">
+                <label class="item item-input">
+                    <input type="text" id="txtPartNo"  placeholder="Part No">
+                </label>
+                <label class="item item-input">
+                    <input type="text" id="txtName" placeholder="Voter Name">
+                </label>
+                <label class="item">
+                    <button class="button button-full header-s" onclick="Search();">
+                        Search
+                    </button>
+                </label>
             </div>
-            <div id="VotersList">
-            </div>
-            
             <br />
             <br />
             <br />
