--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="item" style="padding: 0; margin: 0; border: none;background-color:Transparent;">
                     <div class="row">
                         <div class="col">
-                            <a href="#" class="button button-full button-s" style="font-size: 14px; font-weight: bold;">
+                            <a href="NameSearch.html" class="button button-full button-s" style="font-size: 14px; font-weight: bold;">
                                 <img src="images/search.png" style="width: 75px; height: 75px;" alt="Latest cases" /><br />
                                 By Name</a>
                         </div>
