--- a/update.html
+++ b/update.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿
+<html>
 <head>
     <meta charset="utf-8">
     <title>Weather</title>
@@ -18,57 +19,78 @@
         }
 
         function ReadLocaFiles(FileNo) {
-            Count = 50;
+            try {
+                Count = 50;
 
-            $.ajax({
-                url: 'sarkar/' + FileNo + '.sql',
-                type: 'get',
-                contentType: "application/text; charset=utf-8",
-                success: function (text) {
+                $("#logger").append("FileNo:" + FileNo + "<br/>");
 
-                    var db = window.sqlitePlugin.openDatabase({ name: "sarkar.db" });
+                $.ajax({
+                    url: 'sarkar/' + FileNo + '.sql',
+                    type: 'get',
+                    contentType: "application/text; charset=utf-8",
+                    success: function (text) {
 
-                    db.transaction(function (tx) {
-                        tx.executeSql(text, [], function (tx, res) {
+                        $("#logger").append("text.length:" + FileNo + " = " + text.length + " <br/>");
 
-                            if (FileNo <= Count) {
+                        var db = window.sqlitePlugin.openDatabase({ name: "sarkar.db" });
 
-                                $("#meter").val(FileNo);
+                        db.transaction(function (tx) {
+                            tx.executeSql(text, [], function (tx, res) {
 
-                                ReadLocaFiles((parseInt(FileNo) + 1));
-                            }
-                            else {
+                                if (FileNo <= Count) {
+
+                                    $("#meter").val(FileNo);
+
+                                    $("#logger").append("meter.value = " + $("#meter").val() + "<br/>");
+
+                                    ReadLocaFiles((parseInt(FileNo) + 1));
+                                }
+                                else {
+                                    $("#logger").append("Your application is now up to date, start searching<br/>");
+
+                                    navigator.notification.alert(
+                                        'Your application is now up to date, start searching',
+                                        function () { },
+                                        'Maha Sarkar',
+                                        'Ok'
+                                    );
+
+                                    location = 'home.html';
+                                }
+                            }, function (tx, err) {
+
+                                $("#logger").append("Database Error occured for " + FileNo + ", Error: " + JSON.stringify(err) + "<br/>");
+
                                 navigator.notification.alert(
-                        'Your application is now up to date, start searching',
-                        function () { },
-                        'Maha Sarkar',
-                        'Ok'
-                    );
-
-                                location = 'home.html';
-                            }
-                        }, function (tx, err) {
-
-                            navigator.notification.alert(
                                 "tx.executeSql: " + JSON.stringify(err),
                                 function () { },
                                 'Maha Sarkar',
                                 'Ok'
                             );
+                            });
                         });
-                    });
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    navigator.notification.alert(
+                    },
+                    error: function (xhr, ajaxOptions, thrownError) {
+                        $("#logger").append("Ajax Error occured for " + FileNo + ", Error: " + JSON.stringify(xhr) + "<br/>");
+                        navigator.notification.alert(
                         "ReadLocaFiles Error " + JSON.stringify(xhr),
                         function () { },
                         'Maha Sarkar',
                         'Ok'
                     );
 
-                    Count = 50;
-                }
-            });
+                        Count = 50;
+                    }
+                });
+            } catch (e) {
+                $("#logger").append("catch block Error occured for " + FileNo + ", Error: " + JSON.stringify(e) + "<br/>");
+                navigator.notification.alert(
+                        "ReadLocaFiles Error " + JSON.stringify(e),
+                        function () { },
+                        'Maha Sarkar',
+                        'Ok'
+                    );
+            }
         }
 
     </script>
@@ -186,6 +208,11 @@
 
             <p style="padding: 10px;">
                 <meter id="meter" value="0" max="50" high="30" low="10"></meter>
+            </p>
+
+            <p id="logger" style="overflow: scroll;
+            height: 80px;border:solid 1px silver;" >
+            
             </p>
             <br />
             <br />
